Update engagement-Compliance.html with revised content

--- a/carriere/Politique-RH.html
+++ b/carriere/Politique-RH.html
@@ -65,15 +65,52 @@
 <body>
     <h1 class="title">Notre politique Ressources Humaines</h1 class="title">
     <p class="rh">
-        La <strong>Politique RH du Groupe ASW Afrique</strong> a pour objectif
-        d’attirer les talents et de les cultiver. Pour cela, nous
-        sommes engagés depuis longtemps dans la poursuite d’une
-        démarche d’accompagnement de nos collaborateurs, ce qui
-        permet de s’inscrire dans des pratiques opérationnelles
-        proactives et transparentes au bénéfice de nos salariés
-        et de nos clients. <strong>A Simple Way</strong> met en place des actions qui
-        favorisent l’intégration durable de l’ensemble du personnel
-        et garantit une qualité de service pour ses clients.
+        La Politique RH du Groupe ASW Afrique vise à attirer les talents et à les cultiver, démontrant ainsi un engagement durable envers le développement et le bien-être de ses collaborateurs. Depuis longtemps, le groupe s'est engagé dans une démarche d'accompagnement, adoptant des pratiques opérationnelles proactives et transparentes qui profitent tant aux salariés qu'aux clients.
+        <br>
+        Quelques points clés de cette politique RH incluent :
+    </p>
+    <ul>
+        <li>
+            <p>
+                <strong>Attraction des talents : </strong>
+                La politique RH met en œuvre des stratégies visant à attirer des talents exceptionnels, reconnaissant l'importance cruciale des individus dans la réussite de l'entreprise.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Cultivation des talents : </strong>
+                Au-delà de l'attraction, la politique s'engage également à cultiver les talents internes, favorisant le développement professionnel et personnel de chaque collaborateur.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Démarche d'accompagnement : </strong>
+                Le groupe ASW Afrique s'inscrit dans une démarche d'accompagnement de ses collaborateurs, démontrant une préoccupation constante pour leur bien-être et leur épanouissement au sein de l'organisation.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Pratiques Proactives et transparentes : </strong>
+                L'engagement envers des pratiques opérationnelles proactives et transparentes souligne la volonté du groupe de promouvoir un environnement de travail ouvert, où la communication est claire et honnête.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>
+                    Integration Durable du personnel : 
+                </strong>
+                Des actions sont mises en place pour favoriser l'intégration durable de l'ensemble du personnel, reconnaissant que le sentiment d'appartenance et d'engagement contribue à la productivité et à la satisfaction au travail.
+            </p>
+        </li>
+        <li>
+            <p>
+                <strong>Garantie de Qualités du service : </strong>
+                En investissant dans le développement de ses collaborateurs, A Simple Way assure une qualité de service exceptionnelle pour ses clients, car des employés engagés et compétents sont les piliers d'un service client de premier ordre.
+            </p>
+        </li>
+    </ul>
+    <p>
+        Cette politique RH globale démontre la vision stratégique d'A Simple Way en matière de gestion des ressources humaines, mettant en avant la conviction que le développement des talents et le bien-être des collaborateurs sont des éléments clés pour atteindre l'excellence opérationnelle et la satisfaction client.
     </p>
     <h2>Notre politique RH d'ASW Afrique s'articule sur 3 axes</h2>
     <div class="clickable-dropdown">
@@ -81,10 +118,14 @@
             <div><h3>Identifier et recruter des personalités</h3></div>
             <div class="wrapper">
                 <p id="1">
-                    La qualité et la performance du service rendu à nos clients
-                    repose sur la motivation et les qualités humaines de nos salariés.
-                    Aussi, notre démarche de recrutement met l’accent sur la richesse
-                    des individus et leur motivation tout en valorisant leurs expériences.
+                    La qualité et la performance du service que nous offrons à nos clients reposent sur la motivation et les qualités humaines exceptionnelles de nos salariés. Dans notre démarche de recrutement, nous mettons l'accent sur la richesse individuelle de chaque candidat, en valorisant leurs expériences tout en cherchant à comprendre et à nourrir leur motivation.
+                    <br><br>
+                    Nous croyons fermement que la diversité des talents et des expériences contribue à renforcer notre équipe, apportant des perspectives variées et des compétences complémentaires. En accordant une attention particulière à la motivation des individus, nous cherchons à créer un environnement de travail où chaque collaborateur trouve un épanouissement professionnel.
+                    <br><br>
+                    Notre processus de recrutement va au-delà des simples compétences techniques. Nous nous attachons à identifier les compétences humaines, les valeurs et l'enthousiasme qui font de chaque individu un atout pour notre équipe. Nous croyons que des salariés motivés et engagés sont la clé pour dépasser les attentes de nos clients et pour assurer le succès continu de notre entreprise.
+                    <br><br>
+                    En valorisant la richesse humaine au sein de notre équipe, nous construisons une culture d'entreprise dynamique et collaborative. Nous encourageons nos salariés à apporter leur personnalité, leurs idées novatrices et leur passion dans leur travail quotidien, créant ainsi un environnement propice à l'excellence et à la satisfaction client.
+
                 </p>
             </div>
         </div>
@@ -92,11 +133,13 @@
             <div><h3>Gérer les compétences dans la durée et fidéliser nos collaborateurs</h3></div>
             <div class="wrapper">
                 <p id="2">
-                    En proposant un dispositif innovant de gestion des carrières, ASW
-                    permet aux collaborateurs de se projeter dans un véritable développement
-                    de compétences. ASW offre non seulement une évolution fonctionnelle mais
-                    aussi de nombreuses opportunités de mobilité géographique, au travers de
-                    ses agences de proximité Au Maroc et ses implantations en Afrique.
+                    En déployant un dispositif novateur de gestion des carrières, ASW offre à ses collaborateurs la possibilité de s'engager dans un authentique développement de compétences. Notre approche va au-delà de la simple évolution fonctionnelle, offrant également de nombreuses opportunités de mobilité géographique à travers nos agences de proximité au Maroc et nos implantations en Afrique.
+                    <br><br>
+                    Nous comprenons que chaque individu a des objectifs de carrière uniques et des aspirations professionnelles distinctes. C'est pourquoi notre dispositif de gestion des carrières est conçu pour être flexible et adaptatif, permettant à nos collaborateurs de tracer leur propre chemin de développement professionnel.
+                    <br><br>
+                    En offrant des perspectives d'évolution fonctionnelle, nous encourageons nos collaborateurs à acquérir de nouvelles compétences, à explorer des domaines professionnels variés et à saisir des opportunités de croissance au sein de l'entreprise. La mobilité géographique constitue également un aspect essentiel de notre approche, permettant à nos collaborateurs de découvrir de nouveaux environnements de travail et de contribuer à l'expansion de nos activités en Afrique.
+                    <br><br>
+                    Chez ASW, nous croyons que l'investissement dans le développement professionnel de nos collaborateurs est essentiel pour assurer la satisfaction au travail, la rétention des talents et la qualité constante de nos services. Notre dispositif de gestion des carrières vise à créer un environnement où chacun peut réaliser son potentiel et contribuer de manière significative à la réussite de l'entreprise, quels que soient ses objectifs et aspirations professionnels.
                 </p>
             </div>
         </div>
@@ -104,14 +147,16 @@
             <div><h3>Faire partager une culture d'entreprise</h3></div>
             <div class="wrapper">
                 <p id="3">
-                    ASW repose sur une culture entrepreneuriale forte qui prend toute sa
-                    dimension dans son approche des services : le multimétier. En instaurant
-                    constamment un dialogue de confiance avec ses collaborateurs, le Groupe
-                    garantit à tous l’entretien de leur motivation et leur épanouissement
-                    professionnel. Enfin, et parce qu’une entreprise solidaire est le reflet
-                    de la diversité de la société, ASW favorise l’accès à l’emploi à ceux
-                    qui en sont involontairement éloignés (travailleurs handicapés, jeunes en
-                    attente d’insertion professionnelle etc.).
+                    ASW repose sur une culture entrepreneuriale robuste, qui prend toute sa dimension dans son approche des services : le multimétier. En établissant en permanence un dialogue de confiance avec ses collaborateurs, le Groupe s'assure que chacun maintient sa motivation et s'épanouit professionnellement. Enfin, parce qu'une entreprise solidaire reflète la diversité de la société, ASW favorise l'accès à l'emploi pour ceux qui en sont involontairement éloignés, tels que les travailleurs handicapés, les jeunes en attente d'insertion professionnelle, etc.
+                    <br><br>
+                    Cette culture entrepreneuriale forte constitue le fondement de notre identité, guidant notre approche des services à travers le multimétier. Nous croyons en la force de la diversité des compétences et des talents, et nous encourageons l'innovation et la créativité dans notre façon d'aborder les défis complexes.
+                    <br><br>
+                    Le dialogue ouvert et la confiance entre le Groupe et ses collaborateurs sont essentiels pour entretenir la motivation et l'épanouissement professionnel. Nous reconnaissons que chaque individu contribue de manière unique à notre réussite collective, et nous nous efforçons de créer un environnement où chacun se sent valorisé et soutenu dans son développement.
+                    <br><br>
+                    En tant qu'entreprise solidaire, nous nous engageons à favoriser l'inclusion sociale en offrant des opportunités d'emploi à des groupes souvent éloignés du marché du travail. Nous croyons que la diversité, sous toutes ses formes, enrichit notre entreprise et renforce notre capacité à relever les défis variés auxquels nous sommes confrontés.
+                    <br><br>
+                    Ainsi, chez ASW, notre culture entrepreneuriale est le moteur qui nous pousse à innover, à soutenir nos collaborateurs et à contribuer positivement à la société dans son ensemble.
+
                 </p>
             </div>
         </div>
