--- a/carriere/Politique-emploi.html
+++ b/carriere/Politique-emploi.html
@@ -66,67 +66,58 @@
 <body>
     <h1 class="title">Notre Politique d'Emploi</h1>
     <p>
-        Pour ASW Afrique, le respect des personnes et la reconnaissance du travail accompli
-        vont au-delà des mots inscrits dans une charte. C’est pour nous une manière de
-        se comporter au quotidien et une culture à laquelle nous sensibilisons toutes nos
-        équipes. Dans la poursuite de cette démarche, ASW Afrique a signé fin 2014 la <strong>Charte
-        de la Diversité</strong> afin de manifester et formaliser son engagement en faveur de la
-        non-discrimination et de la diversité, favoriser l’égalité des chances face à
-        l’emploi, tout en améliorant sa performance en la matière. Articulée autour de
-        6 articles, la Charte de la Diversité guide le Groupe dans la mise en place de
-        nouvelles pratiques, en y associant l’ensemble de ses collaborateurs et partenaires.
-        Elle les incite à mettre en œuvre une <strong>politique de gestion des ressources humaines</strong>
-        centrée sur la reconnaissance et la valorisation des compétences individuelles.
-        Nous sommes convaincus que c’est en <strong>valorisant notre capital humain</strong> et en accompagnant
-        nos équipes que nous concourons le mieux à la satisfaction client, notre valeur clé.
+        Pour ASW Afrique, le respect des personnes et la reconnaissance du travail accompli ne se limitent pas à des mots inscrits dans une charte. C'est pour nous une manière de se comporter au quotidien et une culture que nous inculquons à toutes nos équipes. Dans la poursuite de cette démarche, ASW Afrique a signé fin 2014 la Charte de la Diversité afin de manifester et formaliser son engagement en faveur de la non-discrimination et de la diversité, tout en favorisant l'égalité des chances face à l'emploi et en améliorant sa performance en la matière.
+        <br><br>
+        Cette Charte, articulée autour de six articles, guide le Groupe dans la mise en place de nouvelles pratiques, en y associant l'ensemble de ses collaborateurs et partenaires. Elle incite à la mise en œuvre d'une politique de gestion des ressources humaines centrée sur la reconnaissance et la valorisation des compétences individuelles. Nous sommes convaincus que c'est en valorisant notre capital humain et en accompagnant nos équipes que nous contribuons le mieux à la satisfaction client, notre valeur clé.
+        <br><br>
+        Pour nous, la Charte de la Diversité n'est pas simplement un document formel, mais une boussole qui oriente nos actions au quotidien. Elle symbolise notre engagement à créer un environnement de travail inclusif, où chacun, indépendamment de ses origines, de son genre, de son âge ou de toute autre caractéristique, peut s'épanouir et contribuer pleinement à la réussite collective d'ASW Afrique.
     </p>
     <div class="politique">
         <div class="box">
             <h3>Diversité et non-discrimination</h3>
             <p class="text">
-                Notre politique d’emploi s’inscrit dans la lignée de nos engagements RSE. Elle est
-                respectueuse des femmes et des hommes, quels que soient leur origine, leur âge, leur
-                sexe, leur situation. Elle apporte la garantie d’une parfaite intégration des nouveaux
-                collaborateurs et permet de fidéliser un personnel motivé.
-                <br>
-                Dans le respect de nos engagements, notre politique emploi s’appuie sur <strong>4 piliers</strong> :
+                Notre politique d'emploi s'inscrit dans la continuité de nos engagements en matière de responsabilité sociale des entreprises (RSE). Elle est fondée sur le respect des femmes et des hommes, indépendamment de leur origine, de leur âge, de leur sexe ou de leur situation. Cette politique garantit une intégration parfaite des nouveaux collaborateurs et contribue à fidéliser un personnel motivé.
+                <br><br>
+                En accord avec nos engagements RSE, notre politique d'emploi repose sur quatre piliers essentiels :
+
             </p>
             <ol>
-                <li><strong>L'égalité hommes/femme</strong></li>
-                <li><strong>Les accords de génération</strong></li>
-                <li><strong>L'insertion des publiques en difficulté</strong></li>
-                <li><strong>L'insertion des personnes en situations de handicap</strong></li>
+                <li><strong>L'égalité hommes/femme</strong>Nous sommes engagés à promouvoir l'égalité des chances entre hommes et femmes au sein de notre entreprise. Cela se traduit par des pratiques d'embauche et de promotion équitables, garantissant que chacun ait les mêmes opportunités de réussite.</li>
+                <li><strong>Les accords de génération</strong>Nous reconnaissons la valeur de l'expérience et des compétences à chaque étape de la carrière. Nos accords de génération visent à favoriser la transmission des savoirs et à créer un environnement où les différentes générations peuvent collaborer efficacement.</li>
+                <li><strong>L'insertion des publiques en difficulté</strong>Nous nous engageons à favoriser l'insertion professionnelle des publics en difficulté, tels que les jeunes en recherche d'emploi et les personnes en situation de précarité. Nous croyons en l'importance de contribuer activement à l'amélioration de l'employabilité de ces groupes.</li>
+                <li><strong>L'insertion des personnes en situations de handicap</strong>Nous œuvrons pour la création d'un environnement inclusif en facilitant l'insertion professionnelle des personnes en situation de handicap. Cela implique des adaptations spécifiques, un accompagnement personnalisé et la promotion d'un lieu de travail accessible à tous.</li>
             </ol>
+            <p>Ces piliers guident nos actions au quotidien, reflétant notre engagement profond envers la diversité, l'équité et l'inclusion. En adoptant cette approche inclusive dans notre politique d'emploi, nous aspirons à créer un environnement de travail où chaque individu peut s'épanouir et contribuer à la réussite commune de notre entreprise.</p>
         </div>
         <div class="box">
             <h3>L'égalité Hommes/Femmes</h3>
             <p class="text">
-                A Simple Way Facility Management s’attache particulièrement à la <strong>parité homme/femme</strong> au sein de
-                l’entreprise et compte parmi ses effectifs 56% de femmes et 44% d’hommes. Conformément
-                à l’accord du 14 mars 2012, A Simple Way Facility Management a négocié avec les partenaires sociaux des accords
-                d’entreprise en faveur de la <strong>diversité et de l’égalité professionnelle</strong>. Ces accords fixent
-                l’objectif de garantir l’égalité entre femmes et hommes dans les recrutements et dans les
-                métiers, les mêmes conditions d’accès à la formation professionnelle et de garantir aux femmes
-                enceintes des conditions de travail adaptées (aménagement des postes de travail ou affectation
-                temporaire, entretien avant et après le congé maternité, d’adoption ou parental).</p>
+                A Simple Way Facility Management accorde une attention particulière à la parité homme/femme au sein de l'entreprise, affichant fièrement une composition de 56% de femmes et 44% d'hommes au sein de ses effectifs. En alignement avec l'accord du 14 mars 2012, A Simple Way Facility Management a collaboré avec les partenaires sociaux pour élaborer des accords d'entreprise en faveur de la diversité et de l'égalité professionnelle.
+                <br><br>
+                Ces accords visent à instaurer des objectifs clairs, notamment en garantissant l'égalité entre femmes et hommes dans les processus de recrutement et dans les différents métiers au sein de l'entreprise. Ils s'engagent également à assurer des conditions égales d'accès à la formation professionnelle pour tous, tout en mettant en place des mesures concrètes pour garantir aux femmes enceintes des conditions de travail adaptées. Cela inclut des dispositions telles que l'aménagement des postes de travail ou des affectations temporaires, des entretiens avant et après le congé maternité, d'adoption ou parental, assurant ainsi un suivi attentif et un soutien approprié.
+                <br><br>
+                Chez A Simple Way Facility Management, nous croyons que la diversité et l'égalité de genre sont des éléments essentiels de notre réussite. En mettant en œuvre ces accords d'entreprise, nous nous engageons activement à créer un environnement où chacun, indépendamment de son genre, peut exceller et contribuer pleinement à notre succès collectif.
+
+            </p>
         </div>
         <div class="box">
             <h3>Les accords de générations</h3>
             <p class="text">
-                En accord avec la réglementation, A Simple Way Facility Management a négocié en 2013, des <strong>accords de générations
-                </strong> sur l’ensemble de ses entités qui concernent : l’intégration durable des jeunes, le
-                recrutement et le maintien en emploi des seniors, la transmission des savoirs et des compétences
-                <br>
-                Un diagnostic préalable a été réalisé afin de mettre en place des actions pertinentes qui portent sur :
+                En pleine conformité avec la réglementation en vigueur, A Simple Way Facility Management a négocié en 2013 des accords de génération couvrant l'ensemble de ses entités. Ces accords portent sur des aspects cruciaux tels que l'intégration durable des jeunes, le recrutement et le maintien en emploi des seniors, ainsi que la transmission des savoirs et des compétences.
+                <br><br>
+                Pour assurer la pertinence de ces accords, un diagnostic préalable a été minutieusement effectué. Ce diagnostic a pris en compte divers éléments, notamment :
             </p>
             <ul>
-                <li>La pyramide des âges</li>
-                <li>Les caractéristiques des jeunes et des salariés âgés et l’évolution de leur place respective</li>
-                <li>Les prévisions de départ à la retraite</li>
-                <li>Les perspectives de recrutement</li>
-                <li>Les compétences clés dont la préservation est considérée comme essentielle pour le Groupe</li>
-                <li>Les conditions de travail des salariés âgés et les situations de pénibilité</li>
+                <li>La structure démographique de l'entreprise (pyramide des âges).</li>
+                <li>Les caractéristiques spécifiques des jeunes et des salariés âgés, ainsi que l'évolution de leur position respective au sein de l'entreprise.</li>
+                <li>Les projections relatives aux départs à la retraite.</li>
+                <li>Les perspectives de recrutement à venir.</li>
+                <li>Les compétences clés dont la préservation est considérée comme cruciale pour le Groupe.</li>
+                <li>Les conditions de travail des salariés âgés et les situations de pénibilité éventuelles.</li>
             </ul>
+            <p>
+                Ce processus de diagnostic approfondi a permis d'identifier des actions ciblées et pertinentes pour répondre aux enjeux spécifiques de chaque groupe démographique au sein de l'entreprise. Ainsi, ces accords de génération ne sont pas simplement des obligations réglementaires, mais des instruments stratégiques visant à anticiper les évolutions de l'effectif et à promouvoir un environnement de travail équilibré et prospère.
+            </p>
         </div>
     </div>
     <div class="barre-de-contact">
