--- a/engagements/engagement-Compliance.html
+++ b/engagements/engagement-Compliance.html
@@ -69,17 +69,14 @@
     <img class="main" src="assets/engagement Compliance/engagement compliance.jpg" alt="">
     <h2>Éthique & intégrité</h2>
     <p>
-        L’éthique et l’intégrité sont deux valeurs fondamentales que le groupe ASW Afrique
-        promeut dans le cadre des relations d’affaires avec ses partenaires.
+        L'éthique et l'intégrité occupent une place centrale dans les valeurs promues par le groupe ASW Afrique dans le cadre de ses relations d'affaires avec ses partenaires.
         <br><br>
-        Notre objectif est de garantir dans toutes nos filiales des comportements éthiques
-        et des pratiques professionnelles conformes aux législations et réglementations en
-        vigueur de manière à poursuivre sereinement notre développement et assumer notre responsabilité sociétale.
+        L'objectif fondamental du groupe est de garantir des comportements éthiques et des pratiques professionnelles en conformité avec les législations et réglementations en vigueur dans toutes ses filiales. Cet engagement vise à assurer le développement continu du groupe de manière sereine tout en assumant pleinement sa responsabilité sociétale.
         <br><br>
-        Depuis 2018, le groupe ASW Afrique s’est construit et renforcé autour d’un programme de
-        conformité qui répond aux exigences du cadre législatif et réglementaire des territoires
-        où il opère. Ce programme de conformité s’appuie sur des codes, des procédures et des
-        initiatives couvrant l’ensemble des problématiques de conformité pouvant advenir.
+        Depuis 2018, le groupe ASW Afrique a érigé et renforcé un programme de conformité qui répond scrupuleusement aux exigences du cadre législatif et réglementaire des territoires où il opère. Ce programme de conformité repose sur des codes, des procédures et des initiatives couvrant l'ensemble des problématiques de conformité susceptibles de se présenter.
+        <br><br>
+        Cet investissement dans l'éthique et la conformité démontre l'engagement durable d'ASW Afrique envers des normes élevées de conduite professionnelle. Il illustre également la volonté du groupe de jouer un rôle exemplaire en matière de responsabilité sociale, contribuant ainsi à la confiance mutuelle et à la pérennité de ses activités sur le long terme.
+
     </p>
     <div class="images">
         <img src="assets/engagement Compliance/Codes-de-conduite.jpg" alt="">
@@ -92,14 +89,45 @@
     </div>
     <h2>Un réseau de Compliance Officers</h2>
     <p>
-        Le rôle des Compliance Officers locaux est d’accompagner le département
-        Compliance Groupe dans le déploiement des nouvelles procédures auprès des
-        employés mais également de s’assurer en amont que les spécificités locales
-        ont bien été prises en compte. Ils ont pour mission de veiller à la bonne
-        compréhension et à l’utilisation des procédures par les employés de leur
-        région en les formant et en contrôlant l’application de ces nouvelles règles,
-        sous la supervision de la Group Compliance Officer. Ils permettent ainsi de
-        favoriser les échanges et de promouvoir une culture de la transparence. 
+        Le rôle essentiel des Compliance Officers locaux réside dans leur contribution au déploiement des nouvelles procédures en collaboration avec le département Compliance Groupe. Leur mission est double : non seulement ils s'assurent que les spécificités locales sont prises en compte en amont, mais ils jouent également un rôle crucial dans la promotion d'une culture de la transparence au sein de l'organisation.
+        <br><br>
+        En pratique, les Compliance Officers locaux sont chargés de plusieurs missions :
+        <br><br>
+    </p>
+    <ul>
+        <li>
+            <p>
+            <strong>Déploiement des Nouvelles Procédures </strong>Collaborant étroitement avec le département Compliance Groupe, ils participent au déploiement efficace des nouvelles procédures au sein de leur région respective.
+            </p>
+        </li>
+        <li>
+            <p>
+            <strong>Intégration des Spécificités Locales </strong>Ils veillent à ce que les spécificités locales soient prises en compte lors de la mise en œuvre des nouvelles procédures, garantissant ainsi une adaptation pertinente au contexte régional.
+            </p>
+        </li>
+        <li>
+            <p>
+            <strong>Formation des Employés </strong>Compliance Officers locaux ont pour mission d'assurer une compréhension adéquate des nouvelles procédures par les employés de leur région. Cela implique la mise en place de programmes de formation et de sensibilisation.
+            </p>
+        </li>
+        <li>
+            <p>
+            <strong>Contrôle de l'Application des Règles </strong>Sous la supervision de la Group Compliance Officer, ils sont responsables du contrôle effectif de l'application des nouvelles règles au niveau local, veillant à ce que celles-ci soient correctement suivies.
+            </p>
+        </li>
+        <li>
+            <p>
+            <strong>Favoriser les Échanges </strong>En agissant comme des intermédiaires entre le département Compliance Groupe et les employés locaux, ils favorisent les échanges et la communication, contribuant ainsi à une mise en œuvre plus fluide des procédures.
+            </p>
+        </li>
+        <li>
+            <p>
+            <strong>Promotion d'une Culture de la Transparence </strong>Les Compliance Officers locaux jouent un rôle clé dans la promotion d'une culture de la transparence au sein de l'organisation, soulignant l'importance de la conformité et de l'éthique dans toutes les activités.
+            </p>
+        </li>
+    </ul>
+    <p>
+    En résumé, les Compliance Officers locaux sont des acteurs stratégiques qui, grâce à leur connaissance approfondie des spécificités régionales, contribuent de manière significative à l'efficacité du programme de conformité global de l'entreprise.
     </p>
     <div class="barre-de-contact">
         <ul class="CB1">
