--- a/engagements/engagement-RSE.html
+++ b/engagements/engagement-RSE.html
@@ -68,72 +68,94 @@
     <h1 class="title">Nos engagements RSE</h1>
     <img class="main" src="assets/engagement RSE/engagement.png" alt="engagement RSE">
     <p>
-        Depuis 2010, le Groupe A Simple Way Afrique est engagé dans une démarche de responsabilité
-        sociétale et a intégré à son fonctionnement les principes et la structuration
-        de la norme ISO 26000.
+        Depuis 2010, le Groupe A Simple Way Afrique s'est engagé de manière inébranlable dans une démarche de responsabilité sociétale, intégrant pleinement les principes et la structuration de la norme ISO 26000 dans son fonctionnement.
         <br><br>
-        La stratégie RSE du Groupe a établi une liste de 17 enjeux environnementaux,
-        sociaux et de gouvernance, et les a priorisés au regard de leur importance pour
-        les parties prenantes du Groupe et de leur impact sur ses activités. Par ailleurs,
-        A Simple Way Afrique est membre du Pacte Mondial des Nations Unies depuis 2012, signataire de la
-        Charte de la Diversité depuis 2014 et de la déclaration du Caring for Climate depuis 2015.
+        La stratégie RSE du Groupe repose sur la définition de 17 enjeux environnementaux, sociaux et de gouvernance, qui ont été soigneusement priorisés en fonction de leur importance pour les parties prenantes du Groupe et de leur impact sur ses activités. A Simple Way Afrique a également adhéré au Pacte Mondial des Nations Unies depuis 2012, signé la Charte de la Diversité en 2014 et la déclaration du Caring for Climate en 2015.
+        <br><br>
+        <strong>Les principaux enjeux environnementaux, sociaux et de gouvernance abordés par le Groupe incluent :</strong>
     </p>
     <ol class="objectifs">
-        <li>Santé et sécurité des collaborateurs</li>
-        <li>Lutte contre la corruption</li>
-        <li>Droits de l’être humain</li>
-        <li>Performance financière</li>
-        <li>Employeur attractif</li>
-        <li>Lutte contre les discriminations</li>
-        <li>Éthique des affaires et gouvernance responsable</li>
-        <li>Bien-être des occupants et des usagers</li>
-        <li>Innovation et adaptation à l’évolution technologique</li>
-        <li>Gestion des déchets</li>
+        <li><strong>Santé et sécurité des collaborateurs : </strong>Priorité absolue pour assurer le bien-être de notre personnel.</li>
+        <li><strong>Lutte contre la corruption : </strong>Engagement ferme dans la promotion de pratiques éthiques.</li>
+        <li><strong>Droits de l’être humain : </strong>Respect total des droits fondamentaux de chaque individu.</li>
+        <li><strong>Performance financière : </strong>Recherche constante d'une performance financière responsable.</li>
+        <li><strong>Employeur attractif : </strong>Création d'un environnement professionnel attrayant.</li>
+        <li><strong>Lutte contre les discriminations : </strong>Adhésion aux principes de l'égalité et de la diversité.</li>
+        <li><strong>Éthique des affaires et gouvernance responsable : </strong>Promotion d'une éthique irréprochable et d'une gouvernance transparente.</li>
+        <li><strong>Bien-être des occupants et des usagers : </strong>Priorité accordée au confort et à la satisfaction des utilisateurs.</li>
+        <li><strong>Innovation et adaptation technologique : </strong>Intégration continue de l'innovation et de l'évolution technologique.</li>
+        <li><strong>Gestion des déchets : </strong> Approche proactive envers une gestion responsable des déchets.</li>
     </ol>
+    <p>
+        En alignant ses actions sur ces enjeux, le Groupe A Simple Way Afrique démontre son engagement continu envers la durabilité, la responsabilité et la création d'un impact positif sur ses parties prenantes et sur l'environnement dans lequel il opère.
+    </p>
     <h2>Notre performance RSE</h2>
     <div class="performance">
         <div>
             <img src="assets/engagement RSE/Logo-global-compact_petit-1.png" alt="">
-            <p>
-                A Simple Way est membre du Pacte Mondial des Nations Unies depuis 2012.
-                <br><br>
-                Il s’agit d’une initiative des Nations Unies lancée en 2000 visant
-                à inciter les entreprises du monde entier à adopter une attitude
-                socialement responsable. A Simple Way Afrique s’engage donc à respecter les 10
-                principes du Global Compact regroupés autour de 4 thèmes fondamentaux
-                (droits de l’Homme, droit du travail, environnement, lutte contre la corruption).
-            </p>
+            <div style="display: block;">
+                <p>
+                    L'adhésion d'A Simple Way au Pacte Mondial des Nations Unies depuis 2012 témoigne de son engagement en faveur de la responsabilité sociale. Le Pacte Mondial, une initiative lancée par les Nations Unies en 2000, a pour objectif d'encourager les entreprises à travers le monde à adopter des pratiques socialement responsables.
+                    <br><br>
+                    En tant que signataire du Pacte Mondial, A Simple Way Afrique s'engage pleinement à respecter les 10 principes du Global Compact, regroupés autour de quatre thèmes fondamentaux :
+                </p>
+                <ul>
+                    <li>
+                        <p>
+                            <strong>Droits de l'Homme </strong>A Simple Way affirme son soutien et son respect envers la protection des droits de l'homme, évitant toute complicité dans les violations de droits fondamentaux.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <strong>Droit du Travail </strong>Le groupe s'efforce de garantir la liberté d'association et la reconnaissance effective du droit à la négociation collective, ainsi que l'élimination de toutes les formes de travail forcé et obligatoire.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            <strong>Environnement </strong>A Simple Way s'engage à promouvoir une approche proactive de la protection de l'environnement, en prenant des initiatives pour prévenir les problèmes environnementaux.
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Lutte contre la Corruption </strong>En tant que membre du Pacte Mondial, A Simple Way s'engage à lutter contre la corruption sous toutes ses formes, y compris l'extorsion et la corruption.
+                        </p>
+                    </li>
+                </ul>
+                <br>
+                <p>
+                    Cet engagement délibéré reflète la volonté d'A Simple Way Afrique de participer activement à la promotion de valeurs éthiques et à la construction d'un monde des affaires plus socialement responsable.
+                </p>
+            </div>
         </div>
         <div>
             <img src="assets/engagement RSE/logo-caring-for-climate-300x180.png" alt="">
             <p>
-                A Simple Way est signataire du Caring for Climate depuis 2015.
+                L'engagement d'A Simple Way envers la lutte contre le changement climatique est clairement démontré par sa signature du Caring for Climate depuis 2015. Cette initiative souligne l'importance que le groupe accorde à la durabilité environnementale et à la responsabilité climatique.
                 <br><br>
-                A travers cette démarche A Simple Way Afrique met en valeur ses solutions
-                et sa stratégie d’entreprise et partage ses bonnes pratiques
-                en faveur de la lutte contre le changement climatique.
+                En tant que signataire du Caring for Climate, A Simple Way Afrique met en avant ses solutions innovantes et sa stratégie d'entreprise axée sur la durabilité. La participation à cette initiative permet à A Simple Way de partager ses bonnes pratiques, de contribuer activement à la sensibilisation sur les enjeux climatiques et de faire progresser les efforts collectifs en faveur de la protection de l'environnement.
+                <br><br>
+                Cette démarche délibérée souligne l'engagement continu d'A Simple Way à être un acteur positif dans la lutte contre le changement climatique, démontrant ainsi sa responsabilité envers les générations futures et l'environnement mondial.                
             </p>
         </div>
         <div>
             <img src="assets/engagement RSE/Gold22-150x150.png" alt="">
             <p>
-                A Simple Way a obtenu en 2022 la médaille Gold EcoVadis.
+                Félicitations à A Simple Way pour avoir obtenu la médaille Gold EcoVadis en 2022, une reconnaissance bien méritée de ses engagements en matière de responsabilité sociétale des entreprises (RSE). Avec un score impressionnant de 73/100, A Simple Way se positionne parmi les entreprises les plus performantes dans le secteur d'activité "Activités d’appui aux installations intégrées", faisant partie du top 2% des entreprises évaluées par EcoVadis.
                 <br><br>
-                A Simple Way a obtenu un score de 73/100 par EcoVadis. Le Groupe fait
-                partie du top 2% des entreprises évaluées par EcoVadis dans le secteur
-                d’activité « Activités d’appui aux installations intégrées » .
+                Cette médaille Gold atteste de l'engagement exceptionnel d'A Simple Way envers des pratiques commerciales durables, éthiques et socialement responsables. Ce résultat démontre également la place prépondérante du groupe dans la promotion de la durabilité et de la responsabilité dans le cadre de ses opérations.
+                <br><br>
+                Cet accomplissement notoire souligne l'effort constant d'A Simple Way pour exceller dans tous les aspects de ses activités, tout en contribuant de manière positive à la société et à l'environnement. Une performance exemplaire qui positionne A Simple Way en tant que leader dans le domaine de la RSE.
             </p>
         </div>
         <div>
             <img src="assets/engagement RSE/Logo-charte-diversité-300x147.jpg" alt="">
             <p>
-                A Simple Way est signataire du Charte de la Diversité depuis 2014.
+                L'engagement d'A Simple Way envers la diversité et la non-discrimination est clairement affirmé par sa signature de la Charte de la Diversité depuis 2014. Cette charte joue un rôle central dans la manifestation et la formalisation de l'engagement du Groupe en faveur de la diversité.
                 <br><br>
-                Le Groupe a à cœur de manifester et formaliser son engagement en
-                faveur de la non-discrimination et de la diversité. Articulée autour
-                de six articles, la Charte de la Diversité guide le Groupe dans la mise
-                en place de nouvelles pratiques, en y associant l’ensemble de ses
-                collaborateurs et partenaires.
+                Structurée autour de six articles, la Charte de la Diversité guide A Simple Way dans l'adoption de nouvelles pratiques inclusives. Cet engagement implique tous les collaborateurs et partenaires du Groupe, soulignant ainsi la volonté de créer un environnement professionnel respectueux de la diversité, promouvant l'égalité des chances et l'inclusion.
+                <br><br>
+                La démarche volontaire de signer la Charte de la Diversité reflète l'importance que A Simple Way accorde à la création d'un milieu de travail où chaque individu est respecté et valorisé, indépendamment de ses origines, de son genre, de son âge, de ses compétences ou de toute autre caractéristique.
+                <br><br>
+                Cette initiative illustre l'engagement durable d'A Simple Way envers des pratiques éthiques et inclusives, contribuant ainsi à créer une culture organisationnelle qui célèbre la diversité sous toutes ses formes.
             </p>
         </div>
     </div>
